
	* .../business-ledger/gncEntryLedgerLayout.c: change the order
	  of columns in order to get page-up/page-down to work without going
	  into an infinite loop.
	* .../business-ledger/gncEntryLedgerLoad.c: suspend events
	  when we're creating a new entry.  Unfortunately the gnucash-sheet
	  still never counts the blank entry, and I don't know why.
	
2003-01-12  David Hampton  <hampton@employees.org>

	* src/app-utils/gnc-ui-util.c: Add routine for easily extracting a
	directory path from a filename.

	* src/app-file/gnc-file.c: Default the save directory to the
	directory of the last file used. Default the exports directory to
	the direcory of the last file exported this session, or the user's
	home dir for the first export. #94428

	* src/scm/price-quotes.scm: Correctly handle the case where no
	stocks have been defined and the user askes gnucash to get price
	quotes. #102560

	* src/network-utils/gnc-http.c: Work around bug in ghttp library
	so that intl users whose whole units/fractions separator is a
	comma can request web pages.

	* src/register/register-gnome/gnucash-sheet.c
	(gnucash_sheet_insert_cb): Return the number of characters
	entered, not the length of the encoded multi-byte string. Possible
	fix for 99419 and 102057.

2003-01-11  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/gncBusGuile.[ch]: functions to interface
	  between business objects and scheme.  Add hooks to convert between
	  GncAccountValue* and scheme.
	* src/business/business-core/gw-business-core-spec.scm:
	  wrap the GncAccountValue*
	  wrap gncEntryReturnTaxValues()
	  wrap gncEntryGetInvTaxable() and gncEntryGetBillTaxable()
	* src/business/business-reports/invoice.scm: change a couple of
	  columns.  Enable viewing the "taxable" entry.  Enable viewing
	  all the tax accounts individually (fixes bug #102892)

	* src/business/business-core/gw-business-core-spec.scm:
	  wrap gncEntryGetInvTaxTable()
	  wrap gncEntryGetBillTaxTable()